develop 🤖 fix overflow

--- a/src/app/components/course-details-form/course-details-form.component.scss
+++ b/src/app/components/course-details-form/course-details-form.component.scss
@@ -7,3 +7,12 @@ form {
 label {
   gap: 5px;
 }
+
+.editor {
+  min-height: 100px !important;
+
+  & * {
+    word-wrap: break-word !important;
+    word-break: break-all !important;
+  }
+}
